@@ -1,5 +1,7 @@
 18 March 2014: Wouter
 	- unit test for nodb mode.
+	- Speed up zone write (.nl zonefile 30% faster).
+	  The memory alloc-dealloc in print_rr has been moved to print_rrs.
 
 17 March 2014: Wouter
 	- Speed up zone parsing (.nl reads 40% faster).
